--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,5 +3,5 @@ spring.datasource.url = jdbc:mysql://127.0.0.1:3306/auth1
 spring.datasource.username = root
 spring.datasource.password = A@shu#1234
 spring.jpa.show-sql = true
-spring.jpa.hibernate.ddl-auto = create
+spring.jpa.hibernate.ddl-auto = update
 server.port=8082
